# ai-app

./: Dockerfile  README.md  compose.yaml
front/: Dockerfile  README.md  eslint.config.js  package-lock.json  package.json
front/src/: App.css  App.jsx  index.css
front/src/models/: ImageCaptioner.ts  api.ts
server_node/: Dockerfile  index.js  package-lock.json  package.json
server_node/models/: Translator.js  api.js
server_python/: Dockerfile  main.py  pyproject.toml
server_python/models/: api.py  text_to_audio.py
server_python/utils/: __init__.py
