[project]
name = "server-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.10.1",
    "flask>=3.1.3",
    "flask-cors>=6.0.0",
    "optimum<2.0",
    "scipy>=1.13.1",
    "torch>=2.8.0",
    "transformers<4.49",
]
